<resources>
    <string name="app_name">bills-management</string>

    <!--   General-->
    <string name="save">SAVE</string>
    <string name="OK">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="save_changes">Save changes</string>
    <string name="date_format">dd MMM yyyy</string>
    <string name="default_currency">EUR</string>
    <string name="currency">Currency</string>

    <!-- BeginActivity + LoginFragment + RegisterFragment -->
    <string name="begin_login_button">Let\'s go</string>
    <string name="begin_login_now_text">Already have an account?</string>
    <string name="begin_login_now">Sign in</string>
    <string name="begin_login_empty_password">Please enter your password!</string>
    <string name="begin_login_invalid_credentials">Invalid e-mail or password</string>
    <string name="begin_login_remember_me">Remember me</string>
    <string name="begin_register_now">Create one now</string>
    <string name="begin_register_now_text">Don\'t have an account?</string>
    <string name="begin_register_confirm_password">Confirm password</string>
    <string name="begin_register_button">Let\'s get started</string>
    <string name="begin_register_name_error">Insert your name(or nickname)!</string>
    <string name="begin_register_invalid_email_error">Not a valid email address!</string>
    <string name="begin_register_password_len_error">Password must have at least 8 characters!</string>
    <string name="begin_register_confirmPassword_empty_error">Please reenter your password!</string>
    <string name="begin_register_confirmPassword_noMatch_error">Passwords do not match!</string>
    <string name="begin_email_empty">Please insert your email!</string>

    <!--  DashboardActivity  -->
    <string name="dashboard_hi_user">Greetings, %1$s!</string>
    <string name="dashboard_stats">Here are your stats:</string>
    <string name="dashboard_to_pay">Bills to pay: NUMBER</string>
    <string name="dashboard_overdue">Overdue bills: NUMBER</string>
    <string name="dashboard_overall">Overall progress</string>
    <string name="dashboard_bills">Bills</string>
    <string name="dashboard_profile">Profile</string>
    <string name="dashboard_preferences">Preferences</string>
    <string name="dashboard_logout">Logout</string>
    <string name="dashboard_logout_title">Logout confirmation</string>
    <string name="dashboard_logout_message">Are you sure you want to log out?</string>
    <string name="dashboard_progress_status">PAID/TOTAL</string>
    <string name="dashboard_amount_to_pay">Amount to pay: NUMBER CURRENCY</string>
    <string name="dashboard_iv_desc_bills">Bills imageView</string>
    <string name="dashboard_iv_desc_profile">Profile imageView</string>
    <string name="dashboard_iv_desc_preferences">Preferences imageView</string>
    <string name="dashboard_iv_desc_logout">Logout imageView</string>
    <string name="dashboard_iv_desc_welcome">Welcome imageView</string>

    <!--  BillActivity  -->
    <string name="bill_fab_add_desc">Add a new bill</string>
    <string name="bill_fab_filter_desc">Open FilterActivity</string>
    <string name="bill_fab_extend_desc">Extend other buttons</string>

    <!--    AddEditBillActivity-->
    <string name="aebill_dueto">Due to</string>
    <string name="aebill_amount">Amount</string>
    <string name="aebil_recurrent">Recurrent Payment</string>
    <string name="aebill_already_payed">Already paid</string>
    <string name="aebill_recurrent_bill">Recurrent bill</string>
    <string name="aebill_validate_pick_date">Please pick a date</string>
    <string name="aebill_add_supplier">Add new supplier</string>
    <string name="aebill_edit_supplier">Edit supplier</string>
    <string name="aebill_no_suppliers_title">No suppliers found</string>
    <string name="aebill_no_suppliers_message">Looks like there are no suppliers to attach to your bills. You need to add a new one.</string>
    <string name="aebill_validate_amount">Please write a valid amount</string>


    <!--    AddEditSupplierActivity-->
    <string name="aesupplier_phone">Phone</string>
    <string name="aesupplier_delete">Delete supplier</string>
    <string name="aesupplier_invalid_email">Invalid e-mail.</string>
    <string name="aesupplier_invalid_name">Invalid supplier name.</string>
    <string name="aesupplier_invalid_phone">Invalid phone number.</string>
    <string name="aesupplier_supplier_exists">Supplier already exists.</string>
    <string name="aesupplier_delete_supplier">DELETE SUPPLIER</string>
    <string name="aesupplier_delete_supplier_check">ATTENTION! If you delete this supplier, you will also delete all the bills attached to it. Do you wish to proceed?</string>

    <!--    ProfileActivity-->
    <string name="profile_new_password">New Password</string>
    <string name="profile_confirm_old_password">Write old password to confirm changes</string>
    <string name="example_company_com">example@company.com</string>

    <!--    PreferencesActivity-->
    <string name="preference_name_default">Anonymous</string>
    <string name="preference_save_success">The preferences were updated successfully!</string>
    <string name="preferences_gender">Gender</string>

    <!--    FilterActivity-->
    <string name="filter_paid_bill">Paid bill</string>
    <string name="filter_minimum_amount">Min amount</string>
    <string name="filter_maximum_amount">Max amount</string>
    <string name="filter_no_results_found">No results found</string>
    <string name="filter_apply_filters">Apply filters</string>
    <string name="filter_button">Filter</string>
    <string name="filter_invalid_amounts">Invalid amounts. Max must be bigger than min.</string>
    <string name="filter_total_amount_paid">Total amount paid: NUMBER CURRENCY</string>

    <!--    Bill Row View-->
    <string name="rv_amount">Amount CUR</string>
    <string name="rv_supplier">Supplier</string>
    <string name="rv_type">Type</string>
    <string name="preference_et_old_pass_hint">Your password</string>
    <string name="preference_profile_picture">Profile picture</string>
    <string name="rv_billtype_iv">BillType Icon</string>
    <string name="rv_recurrent_iv">Recurrent Icon</string>
    <string name="rv_not_paid_iv">Not paid Icon</string>
    <string name="rv_checked_iv">Paid Icon</string>

    <!--> Logging, Errors, Toasts<-->
    <string name="no_internet">No internet connection</string>
    <string name="invalid_credentials">Invalid email or password</string>
    <string name="login_succes">You\'ve been successfully signed in!</string>
    <string name="firebase_log">FIREBASE</string>
    <string name="log_ok">OK</string>
    <string name="log_error">ERROR</string>
    <string name="profile_updated">User profile updated.</string>
    <string name="create_account_failed">Cannot create account!</string>
    <string name="create_user_succes">User created successfully! Please log in with your new account!</string>
    <string name="log_user_reauthenticated">User re-authenticated.</string>
    <string name="no_update_done">Nothing to update!</string>
    <string name="update_success">Account updated successfully</string>
    <string name="log_failed">FAILED</string>
    <string name="reauthenticate_error">ERROR REAUTHENTICATING</string>
    <string name="invalid_confirm_password">Invalid Confirm Password</string>
    <string name="no_confirm_password">No confirm password</string>
    <string name="update_username_log">UserName updated.</string>
    <string name="password_update_log">User password updated.</string>
    <string name="email_updated_log">User email address updated.</string>
    <string name="email_existing">Email already exists in the database! Enter a different email!</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_invalid_format">Email does not have a valid format</string>
    <string name="password_length_error">New password must have at least 8 characters!</string>
    <string name="sign_out_succes">You signed out succesfully</string>
    <string name="number_replace">NUMBER</string>
    <string name="paid_replace">PAID</string>
    <string name="total_replace">TOTAL</string>
    <string name="currency_replace">CURRENCY</string>
    <string name="supplier_json_added_log">\"SUPPLIER FROM JSON ADDED:  \"</string>
    <string name="bill_json_added_log">\"BILL FROM JSON ADDED:  \"</string>
    <string name="progress_log">PROGRESS:</string>
    <string name="not_paid_log">notPAID:</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="currency_error_message">Currency should have 3 characters! (Ex: EUR, USD, LEI)</string>
    <string name="user_profile_update_log">User profile updated.</string>
    <string name="picture_wait">Picture uploading, please wait!</string>
    <string name="upload_image">Image uploaded</string>
    <string name="image_fail">Failed to upload picture,  please try again!</string>
    <string name="image_progress">Progress: %1$d </string>

</resources>

