<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/act_aebil_cl"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overcast_white"
    android:theme="@style/Theme.ST_dam_prj"
    tools:context=".AddEditBillActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/act_aebill_cl_upper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/blue_banner"
        app:layout_constraintBottom_toTopOf="@+id/act_aebill_button_aesupplier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/act_aebill_tv_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/rv_supplier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/act_aebill_spinner_supplier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/act_aebill_tv_supplier"
            app:layout_constraintTop_toBottomOf="@+id/act_aebill_tv_supplier" />

        <TextView
            android:id="@+id/act_aebill_tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/rv_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/act_aebill_spinner_supplier" />

        <Spinner
            android:id="@+id/act_aebill_spinner_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/act_aebill_tv_type"
            app:layout_constraintTop_toBottomOf="@+id/act_aebill_tv_type" />

        <TextView
            android:id="@+id/act_aebill_tv_due_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/aebill_dueto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/act_aebill_spinner_type" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/aebill_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/act_aebill_tv_display_date" />

        <TextView
            android:id="@+id/act_aebill_tv_display_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:text="@string/date_format"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/act_aebill_spinner_type"
            app:layout_constraintStart_toStartOf="@+id/act_aebill_tv_due_to"
            app:layout_constraintTop_toBottomOf="@+id/act_aebill_tv_due_to" />

        <EditText
            android:id="@+id/act_aebill_et_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/act_aebill_spinner_type"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Switch
            android:id="@+id/act_aebill_switch_recurrent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:text="@string/aebil_recurrent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/act_aebill_et_amount" />

        <Switch
            android:id="@+id/act_aebill_switch_paid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/aebill_already_payed"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/act_aebill_switch_recurrent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/act_aebill_switch_recurrent"
            app:layout_constraintTop_toBottomOf="@+id/act_aebill_switch_recurrent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/act_aebil_button_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/act_aebill_button_aesupplier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/aebill_add_supplier"
        android:backgroundTint="@color/a_little_darker_green"
        app:layout_constraintBottom_toTopOf="@+id/act_aebil_button_save"
        app:layout_constraintEnd_toEndOf="@+id/act_aebil_button_save"
        app:layout_constraintStart_toStartOf="@+id/act_aebil_button_save" />

</androidx.constraintlayout.widget.ConstraintLayout>