<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.ST_dam_prj"
    android:background="@color/transparent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_filter_til_min_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_filter_til_max_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_filter_tiet_min_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:hint="@string/filter_minimum_amount"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_filter_til_max_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dialog_filter_button_apply"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_filter_tiet_max_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/filter_maximum_amount"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/dialog_filter_switch_paid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/filter_paid_bill"
        app:layout_constraintEnd_toEndOf="@+id/dialog_filter_til_max_amount"
        app:layout_constraintStart_toStartOf="@+id/dialog_filter_til_min_amount"
        app:layout_constraintTop_toBottomOf="@+id/dialog_filter_til_max_amount"
        tools:ignore="UseSwitchCompatOrMaterialXml"/>

    <Switch
        android:id="@+id/dialog_filter_switch_recurrent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/aebill_recurrent_bill"
        app:layout_constraintEnd_toEndOf="@+id/dialog_filter_switch_paid"
        app:layout_constraintStart_toStartOf="@+id/dialog_filter_switch_paid"
        app:layout_constraintTop_toBottomOf="@+id/dialog_filter_switch_paid"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/dialog_filter_button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/filter_apply_filters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_filter_switch_recurrent" />
</androidx.constraintlayout.widget.ConstraintLayout>